# Fenix-Server

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/rules/: architecture.md  coding-style.md  git-workflow.md
ad-manager/: conftest.py  fenix-ad-manager.desktop  main.py  main_window.py
ad-manager/models/: __init__.py  ad_group.py  ad_user.py
ad-manager/polkit/: org.fenixserver.ad.policy
ad-manager/services/: __init__.py  ad_service.py  ldap_service.py
ad-manager/tests/: test_ad_group.py  test_ad_service.py  test_ad_user.py  test_domain_tab.py  test_groups_tab.py  test_ldap_service.py  test_main.py  test_main_window.py  test_users_tab.py
ad-manager/widgets/: __init__.py  domain_tab.py  groups_tab.py  users_tab.py
bootstrap/: dev-run.sh  install.sh
core/: __init__.py  dbus_helper.py  polkit.py  roles.py  theme.py
core/tests/: test_dbus_helper.py  test_polkit.py  test_roles.py  test_theme.py
dhcp-manager/: conftest.py  fenix-dhcp-manager.desktop  main.py  main_window.py
dhcp-manager/models/: __init__.py  dhcp_lease.py  dhcp_reservation.py  dhcp_subnet.py
dhcp-manager/polkit/: org.fenixserver.dhcp.policy
dhcp-manager/services/: __init__.py  kea_service.py
dns-manager/: conftest.py  fenix-dns-manager.desktop  main.py  main_window.py
roles/: ad.json  dhcp.json  dns.json  updates.json
server-manager/: conftest.py  fenix-server-manager.desktop  main.py  main_window.py
update-manager/: conftest.py  fenix-update-manager.desktop  main.py  main_window.py
(+56 files in other folders)
