[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fenix-server"
version = "0.1.0"
description = "Suite de gestion serveur Linux avec l'UX de Windows Server (Debian 13 + KDE Wayland)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Fenix Server" }]

dependencies = [
    "PySide6>=6.6",
    "dasbus>=1.7",
    "ldap3>=2.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.0",
    "pytest>=8.0",
]

[tool.setuptools]
# core/ est la seule lib partagée importable par les apps.
# Chaque app reste standalone et n'est pas packagée ici.
packages = ["core"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["core/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
